[gd_scene load_steps=12 format=2]

[ext_resource path="res://Imp/imp_default-1.png" type="Texture" id=1]
[ext_resource path="res://Imp/imp_default-2.png" type="Texture" id=2]
[ext_resource path="res://Imp/imp_move-2.png" type="Texture" id=3]
[ext_resource path="res://Imp/imp_move-3.png" type="Texture" id=4]
[ext_resource path="res://Imp/imp_move-4.png" type="Texture" id=5]
[ext_resource path="res://Imp/imp_move-1.png" type="Texture" id=6]
[ext_resource path="res://Imp/Imp.gd" type="Script" id=7]
[ext_resource path="res://Imp/AnimatedSprite.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 300.0

[node name="Imp" type="KinematicBody2D"]
script = ExtResource( 7 )
speed = 2.0

[node name="MovementCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = SubResource( 2 )
frame = 1
playing = true
script = ExtResource( 8 )

[node name="RangedAttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangedAttackZone"]
shape = SubResource( 3 )

[connection signal="imp_idle" from="." to="AnimatedSprite" method="_on_Imp_imp_idle"]
[connection signal="imp_motion" from="." to="AnimatedSprite" method="_on_Imp_imp_motion"]
[connection signal="body_entered" from="RangedAttackZone" to="." method="_on_RangedAttackZone_body_entered"]
[connection signal="body_exited" from="RangedAttackZone" to="." method="_on_RangedAttackZone_body_exited"]
